--- a/src/components/callout/callout.config.json
+++ b/src/components/callout/callout.config.json
@@ -8,7 +8,7 @@
         {
           "url": "https://iastate.edu",
           "text": "Link Lorem Ipsum Dolor",
-          "variant": "link-secondary"
+          "variant": "iastate22-link-secondary"
         }
       ]
     }
