--- a/src/components/link-block/link-block.config.json
+++ b/src/components/link-block/link-block.config.json
@@ -6,32 +6,32 @@
         {
           "url": "https://iastate.edu",
           "text": "Link Label Lorem Ipsum Dolor Sit",
-          "variant": "link-secondary"
+          "variant": "iastate22-link-secondary"
         },
         {
           "url": "https://iastate.edu",
           "text": "Link Label Lorem Ipsum Dolor",
-          "variant": "link-secondary"
+          "variant": "iastate22-link-secondary"
         },
         {
           "url": "https://iastate.edu",
           "text": "Link Label Lorem",
-          "variant": "link-secondary"
+          "variant": "iastate22-link-secondary"
         },
         {
           "url": "https://iastate.edu",
           "text": "Link Name Lorem Ipsum",
-          "variant": "link-secondary"
+          "variant": "iastate22-link-secondary"
         },
         {
           "url": "https://iastate.edu",
           "text": "Link Label Lorem Dolor",
-          "variant": "link-secondary"
+          "variant": "iastate22-link-secondary"
         },
         {
           "url": "https://iastate.edu",
           "text": "Link Label Lorem Ipsum Dolor",
-          "variant": "link-secondary"
+          "variant": "iastate22-link-secondary"
         }
       ]
     }
