--- a/src/components/link-set/link-set.config.json
+++ b/src/components/link-set/link-set.config.json
@@ -4,7 +4,7 @@
       {
         "url": "https://iastate.edu",
         "text": "Secondary Link Style",
-        "variant": "link-secondary"
+        "variant": "iastate22-link-secondary"
       },
       {
         "url": "https://www.google.com/",
