--- a/src/components/pages/top-level-landing-page.config.json
+++ b/src/components/pages/top-level-landing-page.config.json
@@ -54,7 +54,7 @@
         {
           "url": "https://iastate.edu",
           "text": "Secondary Link Style",
-          "variant": "link-secondary"
+          "variant": "iastate22-link-secondary"
         },
         {
           "url": "https://www.google.com/",
@@ -128,7 +128,7 @@
               {
                 "url": "https://iastate.edu",
                 "text": "Link Lorem Ipsum Dolor",
-                "variant": "link-secondary"
+                "variant": "iastate22-link-secondary"
               }
             ]
           }
@@ -146,7 +146,7 @@
               {
                 "url": "https://iastate.edu",
                 "text": "Link Lorem Ipsum Dolor",
-                "variant": "link-secondary"
+                "variant": "iastate22-link-secondary"
               }
             ]
           }
@@ -160,7 +160,7 @@
               {
                 "url": "https://iastate.edu",
                 "text": "Link Lorem Ipsum Dolor",
-                "variant": "link-secondary"
+                "variant": "iastate22-link-secondary"
               }
             ]
           }
@@ -178,7 +178,7 @@
               {
                 "url": "https://iastate.edu",
                 "text": "Link Lorem Ipsum Dolor",
-                "variant": "link-secondary"
+                "variant": "iastate22-link-secondary"
               }
             ]
           }
@@ -192,7 +192,7 @@
               {
                 "url": "https://iastate.edu",
                 "text": "Link Lorem Ipsum Dolor",
-                "variant": "link-secondary"
+                "variant": "iastate22-link-secondary"
               }
             ]
           }
@@ -206,7 +206,7 @@
               {
                 "url": "https://iastate.edu",
                 "text": "Link Lorem Ipsum Dolor",
-                "variant": "link-secondary"
+                "variant": "iastate22-link-secondary"
               }
             ]
           }
@@ -244,32 +244,32 @@
           {
             "url": "https://iastate.edu",
             "text": "Link Label Lorem Ipsum Dolor Sit",
-            "variant": "link-secondary"
+            "variant": "iastate22-link-secondary"
           },
           {
             "url": "https://iastate.edu",
             "text": "Link Label Lorem Ipsum Dolor",
-            "variant": "link-secondary"
+            "variant": "iastate22-link-secondary"
           },
           {
             "url": "https://iastate.edu",
             "text": "Link Label Lorem",
-            "variant": "link-secondary"
+            "variant": "iastate22-link-secondary"
           },
           {
             "url": "https://iastate.edu",
             "text": "Link Name Lorem Ipsum",
-            "variant": "link-secondary"
+            "variant": "iastate22-link-secondary"
           },
           {
             "url": "https://iastate.edu",
             "text": "Link Label Lorem Dolor",
-            "variant": "link-secondary"
+            "variant": "iastate22-link-secondary"
           },
           {
             "url": "https://iastate.edu",
             "text": "Link Label Lorem Ipsum Dolor",
-            "variant": "link-secondary"
+            "variant": "iastate22-link-secondary"
           }
         ]
       }
