--- a/src/components/pages/college-template.config.json
+++ b/src/components/pages/college-template.config.json
@@ -268,7 +268,7 @@
           {
             "url": "https://iastate.edu",
             "text": "Learn More About Career Preparation",
-            "variant": "link-secondary"
+            "variant": "iastate22-link-secondary"
           }
         ]
       },
