https://bugify.idfive.com/issues/27597

--- a/src/components/page-preview.config.json
+++ b/src/components/page-preview.config.json
@@ -177,6 +177,10 @@
               "url": "https://www.iastate.edu/"
             }
           ]
+        },
+        {
+          "title": "Standalone Link",
+          "url": "https://www.iastate.edu/"
         }
       ]
     },
