college home hero component progress

--- a/src/components/college-home-hero/college-home-hero.config.json
+++ b/src/components/college-home-hero/college-home-hero.config.json
@@ -1,3 +1,44 @@
 {
-  "context": {}
+  "context": {},
+  "variants": [
+    {
+      "name": "featured-image",
+      "context": {
+        "hero": {
+          "image": "../../img/college-hero-featured_fpo.jpg",
+          "title": "Hero Title Lorem Ipsum Dolor",
+          "button_set": {
+            "items": [
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              },
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              }
+            ]
+          }
+        }
+      },
+      "name": "no-image",
+      "context": {
+        "hero": {
+          "title": "Hero Title Lorem Ipsum Dolor",
+          "button_set": {
+            "items": [
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              },
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              }
+            ]
+          }
+        }
+      }
+    }
+  ]
 }
