--- a/src/components/pages/college-template.config.json
+++ b/src/components/pages/college-template.config.json
@@ -22,8 +22,28 @@
           }
         ]
       },
-      "image_mobile": "../../img/college-template-hero-fpo-mobile.jpg",
-      "image_desktop": "../../img/college-template-hero-fpo-desktop.jpg",
+      "images": [
+        {
+          "mobile": {
+            "src": "http://via.placeholder.com/621x989",
+            "alt": "lorem alt text"
+          },
+          "desktop": {
+            "src": "http://via.placeholder.com/2160x1149",
+            "alt": "lorem alt text"
+          }
+        },
+        {
+          "mobile": {
+            "src": "/img/college-template-hero-fpo-mobile.jpg",
+            "alt": "lorem alt text"
+          },
+          "desktop": {
+            "src": "/img/college-template-hero-fpo-desktop.jpg",
+            "alt": "lorem alt text"
+          }
+        }
+      ],
       "title": "Agriculture and Life Sciences"
     },
     "overview": {
