link set issues - https://bugify.idfive.com/issues/27637

--- a/src/components/external-news-story/external-news-story.config.json
+++ b/src/components/external-news-story/external-news-story.config.json
@@ -7,8 +7,9 @@
     "link_set": {
       "links": [
         {
-          "url": "https://www.google.com/",
-          "text": "External Link Style"
+          "url": "https://iastate.edu",
+          "text": "External Link Style",
+          "variant": "iastate22-link-external"
         }
       ]
     }
