--- a/src/components/pages/top-level-landing-page.config.json
+++ b/src/components/pages/top-level-landing-page.config.json
@@ -57,8 +57,9 @@
           "variant": "iastate22-link-secondary"
         },
         {
-          "url": "https://www.google.com/",
-          "text": "External Link Style"
+          "url": "https://iastate.edu",
+          "text": "External Link Style",
+          "variant": "iastate22-link-external"
         },
         {
           "url": "https://iastate.edu",
@@ -282,8 +283,9 @@
       "link_set": {
         "links": [
           {
-            "url": "https://www.google.com/",
-            "text": "External Link Style"
+            "url": "https://iastate.edu",
+            "text": "External Link Style",
+            "variant": "iastate22-link-external"
           }
         ]
       }
