--- a/src/components/link-set/link-set.config.json
+++ b/src/components/link-set/link-set.config.json
@@ -7,8 +7,9 @@
         "variant": "iastate22-link-secondary"
       },
       {
-        "url": "https://www.google.com/",
-        "text": "External Link Style"
+        "url": "https://iastate.edu",
+        "text": "External Link Style",
+        "variant": "iastate22-link-external"
       },
       {
         "url": "https://iastate.edu",
